# AgentXRay

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_experiment.py
scripts/: convert_to_alpaca.py  run_random_baseline.py
src/deagent/: __init__.py  cli.py  evaluation.py  experiment.py  potential.py  reporting.py
src/deagent/agents/: __init__.py  base.py  typing.py
src/deagent/backends/: __init__.py  gpt.py
src/deagent/config/: __init__.py  config.yaml  exp_agent_only.yaml  exp_atoms.yaml  exp_atoms_agent_only.yaml  exp_atoms_mcts_base.yaml  exp_atoms_min_tool.yaml  exp_atoms_no_coloring.yaml  exp_baseline.yaml  exp_mcts_baseline.yaml  exp_minimal_tool_pool.yaml  exp_no_coloring.yaml  exp_pure_random.yaml  model_library.json  model_library_atoms.json  reasoning_patterns.json  role_config.json  task_config.json  task_prompt.py  tool_prompt.py
src/deagent/problem_analysis/: __init__.py  problem_types.py  text_parser.py
src/deagent/search/: __init__.py  node_search.py  search.py  tree.py
src/deagent/tools/: __init__.py  code_summarizer.py  compiler.py  dependency_extractor.py  empty_detect.py  file_lister.py  file_reader.py  file_writer.py  path_utils.py  static_analyzer.py  style_checker.py  syntax_error_checker.py  test_runner.py  undefined_name_checker.py  variable_checker.py  web_searcher.py
src/deagent/utils/: __init__.py  codes.py  json_fix.py  log.py  roles.py  usage_stats.py  util.py
tests/: test_basic_framework.py
