[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentxray"
version = "0.1.0"
description = "AgentXRay ICML 2026 code release"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"deagent.config" = ["*.yaml", "*.json"]
